# ChangeLog for media-gfx/fim
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Aug 2007; Jakub Moc <jakub@gentoo.org> fim-0.1_alpha.ebuild:
  Install docs to proper location

  09 Aug 2007; Jakub Moc <jakub@gentoo.org> +metadata.xml,
  +fim-0.1_alpha.ebuild:
  New ebuild, Bug 188217
