@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/fim
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  02 Jan 2008; (Tommy[D]) tommy100@gmx.de fim-0.1_alpha.ebuild:
+  Changed location of homepage and source-uri as requested in bug 188287
 
   09 Aug 2007; Jakub Moc <jakub@gentoo.org> fim-0.1_alpha.ebuild:
   Install docs to proper location
